Fixed #8488: (0.8.1dev)  * Removed the border around the collapsed fieldset of 'Batch Modify' so that it displays like Trac's 'Filters' and 'Columns'.
git-svn-id: https://trac-hacks.org/svn@11791 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/batchmodifyplugin/0.11/trunk/batchmod/htdocs/css/batchmod.css
+++ b/batchmodifyplugin/0.11/trunk/batchmod/htdocs/css/batchmod.css
@@ -11,6 +11,12 @@
     padding: 0.1em 0.5em;
 }
 
+#batchmod_form fieldset.collapsed {
+ border-width: 0;
+ margin-bottom: 0pt;
+ padding: 0pt .5em;
+}
+
 #batchmod_form th {
     text-align: right;
     white-space: nowrap;
